Adding icons and trying to improve look

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,18 @@
     <string name="name">Name</string>
     <string name="signers">Signers</string>
     <string name="owner">Owner</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
+    <string name="pdfs_owned">PDFs Owned</string>
+    <string name="pdfs_to_sign">PDFs to sign</string>
+    <string name="pdfs_signed">PDFs signed</string>
+    <string name="title_home">Title Home</string>
+    <string name="title_dashboard">Title dashboard</string>
+    <string name="title_notifications">Title notifications</string>
+    <string name="upload_pdf">Upload PDF</string>
 </resources>
